src/components/common/Nav.module.css
.nav {
  position: fixed;
  top: 0;
  left: 0;
  height: 180px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 10px 0;
  box-shadow: 0 4px 3px -3px var(--secondary-bg-color);
  background-color: #f9f6f6;
  /* CURRENTLY THE BELOW ENDS UP TRANSPARENT, POSSIBLE GATSBY ISSUE? */
  /* background-color: var(--primary-bg-color); */
  z-index: 1;
  transition: height 0.2s linear;
}

.navCollapse {
  height: 70px;
}

.navLink {
  margin: 0 1rem;
  width: 130px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navLogo {
  transition: transform 0.4s;
  transform: scale(1);
}

.navCollapse .navLogo {
  transition: transform 0.4s;
  transform: scale(0.4);
}

